apps/gitlab/gitalb-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-redis-master
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab-redis
  template:
    metadata:
      labels:
        app: gitlab-redis
    spec:
      containers:
        - name: redis
          image: redis:7.2-alpine
          ports:
            - containerPort: 6379
          command: ["redis-server"]
          args: ["--requirepass", "$(REDIS_PASSWORD)"]
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-redis-master
  namespace: gitlab
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: gitlab-redis
